add admin login with gmail

--- a/drugaddiction/src/main/res/values/strings.xml
+++ b/drugaddiction/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
-    <string name="app_name">Drug Adiction</string>
+    <string name="app_name">Drug Addicts Counselling System</string>
 
     <string name="Open">open</string>
     <string name="Close">close</string>
-
 
 
     <string name="ok">ok</string>
